# FileTransport

./: .gitignore  CMakeLists.txt  LinuxSocket.cpp  LinuxSocket.h  LinuxThread.cpp  LinuxThread.h  Platform.h  PlatformSocket.cpp  PlatformSocket.h  PlatformThread.h  TCPClient.cpp  TCPClient.h  TCPClientClosedState.cpp  TCPClientClosedState.h  TCPClientEstablishedState.cpp  TCPClientEstablishedState.h  TCPClientFacade.cpp  TCPClientFacade.h  TCPClientState.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  TCPServerClosedState.cpp  TCPServerClosedState.h  TCPServerEstablishedState.cpp  TCPServerEstablishedState.h  TCPServerFacade.cpp  TCPServerFacade.h  TCPServerListenState.cpp  TCPServerListenState.h  TCPServerState.cpp  TCPServerState.h  TCPState.cpp  TCPState.h  WindowsSocket.cpp  WindowsSocket.h  WindowsThread.cpp  WindowsThread.h  main.cpp
connect/: TCPClient.cpp  TCPConnection.cpp  TCPConnection.h  TCPServer.h
facade/: TCPClientFacade.cpp  TCPServerFacade.cpp
platform/: LinuxSocket.cpp  LinuxThread.cpp  PlatformThread.cpp  PlatformThread.h  WindowsSocket.h  WindowsThread.cpp
state/: TCPClientClosedState.cpp  TCPClientClosedState.h  TCPClientEstablishedState.h  TCPClientState.cpp  TCPServerClosedState.cpp  TCPServerClosedState.h  TCPServerListenState.cpp  TCPServerListenState.h  TCPServerState.h  TCPState.h
